k8s/request-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: request-service
spec:
  selector:
    app: request-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
